--- a/Rapport Stage/texFiles/conclusion.tex
+++ b/Rapport Stage/texFiles/conclusion.tex
@@ -3,7 +3,7 @@
 
 \section{Rappel de la problèmatique}
 
-\section{Répone apportées}
+\section{Réponse apportées}
 
 \section{Piste d'amélioration}
 
