--- a/Rapport Stage/texFiles/Deroulement.tex
+++ b/Rapport Stage/texFiles/Deroulement.tex
@@ -1,7 +1,7 @@
 \hypertarget{Déroulement}{%
 \chapter{Déroulement}\label{Déroulement}}
 
-Ce chapitre, le plus volumineux du rapport, décrira l'ensemble des tâches que j'ai eu à effectuer au cours de ces trois semaines.
+Ce chapitre, le plus volumineux du rapport, décrira l'ensemble des tâches que j'ai eu à effectuer au cours de ces deux mois.
 
 
 \section{État des lieux}
