--- a/Rapport Stage/texFiles/Deroulement.tex
+++ b/Rapport Stage/texFiles/Deroulement.tex
@@ -9,3 +9,6 @@ Citation:
 \cite{Lympero}
 
 \section{Solutions envisagées}
+\subsection{Modélisation de sudoku en Python}
+\subsection{Stratégie de résolution}
+\subsection{Implémentation}
