--- a/Rapport Stage/texFiles/Introduction.tex
+++ b/Rapport Stage/texFiles/Introduction.tex
@@ -4,14 +4,151 @@
 \section{Présentation de la structure
 d'accueil}
 
+Durant la période de mon stage , j'ai été accueilli au
+\textbf{Laboratoire de Mathématiques Informatique et Application
+(LAMIA)} de l'Université des Antilles (UA).
 
-\hypertarget{Contexte du problème}{%
-\section{Contexte du problème}\label{problematique}}
+Pour présenter cette structure, il me faut tout d'abord présenter
+l'université à laquelle il est rattaché.
 
-\include{problematique}
+\hypertarget{luniversite-des-antilles}{%
+\subsection{L'université des Antilles}\label{luniversite-des-antilles}}
+
+Bien que ce soit l'université dans laquelle j'ai fait toutes mes études,
+voici quelques chiffres que je ne connaissais pas et qui donnent la
+mesure de sa taille :
+
+L'Université des Antilles s'organise autour deux pôles universitaires
+régionaux autonomes : le « Pôle Guadeloupe » et le « Pôle Martinique ».
+
+Sur ces pôles, l'Université assure des missions d'\emph{enseignement} et
+de \emph{recherche}, assistées par des \emph{administratifs et des
+techniciens}.
+
+\hypertarget{administration-et-personnel-technique}{%
+\subsubsection{Administration et personnel
+technique}
+\label{administration-et-personnel-technique}}
+
+l'UA emploie 414 Administratifs et Techniciens (environ 200 personnes
+pour l'administation centrale et 100 répartis sur chaque pôle)
+
+\hypertarget{enseignements}{%
+\subsubsection{Enseignements}\label{enseignements}}
+
+L'UA délivre des diplomes de la licence au doctorat dans de nombreux
+domaines. Au total, cela représente :
+
+\begin{itemize}
+\tightlist
+\item
+  484 enseignants-chercheurs (environ 240 pour chaque pôle)
+\item
+  12 000 étudiants (environ 7000 pour la Guadeloupe , 5000 pour la
+  Martinique)
+\end{itemize}
+
+Pour l'informatique, cela représente : - autour de 20
+enseignants-chercheurs - autour de 120 étudiants
+
+\hypertarget{le-lamia}{%
+\subsection{Le LAMIA}\label{le-lamia}}
+
+Le \textbf{Laboratoire de Mathématiques Informatique et Application
+(LAMIA)}, comme son nom l'indique, se concentre sur les recherches en
+informatiques et mathématiques.
+
+Il compte une soixantaine de membres (Professeurs des Universités,
+Maitres de Conférences, ATER, Doctorants) répartis sur deux pôles
+(Guadeloupe et Martinique) au sein de trois équipes internes :
+
+\begin{itemize}
+\tightlist
+\item
+  Equipe
+  \href{http://lamia.univ-ag.fr/index.php?page=equipe-mathematiques}{\textbf{Mathématiques}
+  (analyse variationnelle, analyse numérique, EDP, analyse statistique,
+  mathématiques discrètes)} ;
+\item
+  Equipe Informatique
+  \href{http://lamia.univ-ag.fr/index.php?page=equipe-danais}{\textbf{DANAIS}
+  : Data analytics and big data gathering with sensors} ;
+\item
+  Equipe Informatique
+  \href{http://lamia.univ-ag.fr/index.php?page=equipe-aid}{\textbf{AID}
+  : Apprentissages Interactions Donnees} ;
+\end{itemize}
+
+De plus, le LAMIA accueille en son sein un groupe de chercheurs associés
+travaillant en Epidémiologie clinique et médecine.
+
+
+%\input{problematique}
 
 \hypertarget{Méthodologie}{%
 \section{Méthodologie}\label{Méthodologie}}
+
+\subsection{Outils utilisés}
+
+\subsubsection{Présentation de Python}
+
+\begin{figure}[h]
+  \begin{center}
+  \includegraphics[width=5cm]{./images/Python_Logo.png}\label{Python}
+  \caption{Logo de Python.}
+  \end{center}
+\end{figure}
+
+Python est un langage de programmation interprété\footnote{\label{interprete}Langage nécéssitant un programme informatique qui joue le rôle d’interface entre le projet et le processeur appellé interpréteur, pour exécuter du code.} qui sera utiliser pour l'ensemble du projet.
+
+\subsubsection{Présentation Qt}
+
+\begin{figure}[h]
+  \begin{center}
+  \includegraphics[width=5cm]{./images/Qt_logo_2016.png}\label{Qt}
+  \caption{Logo de Qt.}
+  \end{center}
+\end{figure}
+
+QT est une librairie\footnote{\label{librairie}Une librairie est un fichier contenant du code (généralement un ensemble de fonction et classes permettant de faciliter et/où de réaliser certain programme)} qui permet le création d'interface graphique en Python.Que nous utiliserons pour créer l'interface que l'on utilisera au cours du projet.
+
+\subsubsection{Présentation Cplex}
+
+\begin{figure}[h]
+  \begin{center}
+  \includegraphics[width=5cm]{./images/cplex.png}\label{Cplex}
+  \caption{Logo de Cplex.}
+  \end{center}
+\end{figure}
+
+Cplex est une librairie\footref{librairie} qui permet la modélisation et la résolution de problème de programmation linéaire\footnote{Terme que j'expliquerais plus tard dans mon rapport}.
+
+\subsubsection{Présentation de GitHub}
+
+\begin{figure}[h]
+  \begin{center}
+  \includegraphics[width=5cm]{./images/github.jpg}\label{GitHub}
+  \caption{Logo de GitHub.}
+  \end{center}
+\end{figure}
+
+
+Nous pouvons définir GitHub comme une plateforme de développement de projet informatique en groupe. Elle simplifie grandement le développement de projets. Elle permet de versioner ses programmes et d'y apporter des modifications en temps réel à plusieurs.
+
+\subsubsection{Présentation de LaTex}
+
+\begin{figure}[h]
+  \begin{center}
+\includegraphics[width=5cm]{./images/Latex.png}\label{LaTex}
+\caption{Logo de LaTex}
+\end{center}
+\end{figure}
+
+Nous pouvons dire que LaTex est un langage de traitement de texte tel que le markdown qui permet de mettre en forme notre texte de manière \"scientifique\" cela veut dire que. LaTex permet une faciliter d'écriture des équations et de toutes les écriture mathématiques.Permet de par ses nombreux package une quasi-infinité de possibilitées.
+
+\subsubsection{Pourquoi Github et LaTex}
+Cela permet une synergie entre nos différents outils car LaTex peut-être utiliser avec un simple bloc-note c'est donc du texte ce qui permet une intéraction facilitée avec GitHub d'ailleurs ce rapport est écrit avec Latex et retrouvable sur GitHub.
+
 
 \hypertarget{Annonce du plan}{%
 \section{Annonce du plan}\label{annonce du plan}}
