--- a/Rapport Stage/texFiles/pageDeGarde.tex
+++ b/Rapport Stage/texFiles/pageDeGarde.tex
@@ -6,7 +6,7 @@
     }
     \begin{center}
         \vspace*{1cm}
-        \includegraphics[width=6.5cm]{./images/logoUA.jpg
+        \includegraphics[width=6.5cm]{./images/logoUA.jpg}
         \vspace*{0.5cm}
 
         \textsc{\@title}
