--- a/Rapport Stage/texFiles/rapport.tex
+++ b/Rapport Stage/texFiles/rapport.tex
@@ -3,6 +3,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[french]{babel}
 \usepackage{graphicx}
+\usepackage{footmisc}
 \usepackage{fullpage}
 \usepackage{eso-pic}
 \usepackage{hyperref}
