--- a/Rapport Stage/texFiles/Introduction.tex
+++ b/Rapport Stage/texFiles/Introduction.tex
@@ -83,18 +83,19 @@ De plus, le LAMIA accueille en son sein un groupe de chercheurs associés
 travaillant en Epidémiologie clinique et médecine.
 
 
-%\input{problematique}
+\input{problematique}
 
-\hypertarget{Méthodologie}{%
+\hypertarget{Méthodologie}{
 \section{Méthodologie}\label{Méthodologie}}
-
 \subsection{Outils utilisés}
+
+
 
 \subsubsection{Présentation de Python}
 
 \begin{figure}[h]
   \begin{center}
-  \includegraphics[width=5cm]{./images/Python_Logo.png}\label{Python}
+  \includegraphics[width=4cm]{./images/Python_Logo.png}\label{Python}
   \caption{Logo de Python.}
   \end{center}
 \end{figure}
@@ -105,7 +106,7 @@ Python est un langage de programmation interprété\footnote{\label{interprete}L
 
 \begin{figure}[h]
   \begin{center}
-  \includegraphics[width=5cm]{./images/Qt_logo_2016.png}\label{Qt}
+  \includegraphics[width=2cm]{./images/Qt_logo_2016.png}\label{Qt}
   \caption{Logo de Qt.}
   \end{center}
 \end{figure}
@@ -116,18 +117,18 @@ QT est une librairie\footnote{\label{librairie}Une librairie est un fichier cont
 
 \begin{figure}[h]
   \begin{center}
-  \includegraphics[width=5cm]{./images/cplex.png}\label{Cplex}
+  \includegraphics[width=4cm]{./images/cplex.png}\label{Cplex}
   \caption{Logo de Cplex.}
   \end{center}
 \end{figure}
 
-Cplex est une librairie\footref{librairie} qui permet la modélisation et la résolution de problème de programmation linéaire\footnote{Terme que j'expliquerais plus tard dans mon rapport}.
-
+Cplex est une librairie\footref{librairie} qui permet la modélisation et la résolution de problème d'optimisation linéaire\footnote{Terme que j'expliquerais plus tard dans mon rapport}.
+\newline
+\newline
 \subsubsection{Présentation de GitHub}
-
 \begin{figure}[h]
   \begin{center}
-  \includegraphics[width=5cm]{./images/github.jpg}\label{GitHub}
+  \includegraphics[width=3cm]{./images/github.jpg}\label{GitHub}
   \caption{Logo de GitHub.}
   \end{center}
 \end{figure}
@@ -139,16 +140,21 @@ Nous pouvons définir GitHub comme une plateforme de développement de projet in
 
 \begin{figure}[h]
   \begin{center}
-\includegraphics[width=5cm]{./images/Latex.png}\label{LaTex}
+\includegraphics[width=2cm]{./images/Latex.png}\label{LaTex}
 \caption{Logo de LaTex}
 \end{center}
 \end{figure}
 
 Nous pouvons dire que LaTex est un langage de traitement de texte tel que le markdown qui permet de mettre en forme notre texte de manière \"scientifique\" cela veut dire que. LaTex permet une faciliter d'écriture des équations et de toutes les écriture mathématiques.Permet de par ses nombreux package une quasi-infinité de possibilitées.
-
-\subsubsection{Pourquoi Github et LaTex}
-Cela permet une synergie entre nos différents outils car LaTex peut-être utiliser avec un simple bloc-note c'est donc du texte ce qui permet une intéraction facilitée avec GitHub d'ailleurs ce rapport est écrit avec Latex et retrouvable sur GitHub.
+L'utilisation de cet outil permettra une synergie entre ceux-ci car LaTex peut-être utiliser avec un simple bloc-note c'est donc du texte ce qui permet une intéraction facilitée avec GitHub d'ailleurs ce rapport est écrit avec Latex et retrouvable sur GitHub.\newline
 
 
 \hypertarget{Annonce du plan}{%
 \section{Annonce du plan}\label{annonce du plan}}
+
+\subsection{Présentations des stratégies de résolution}
+
+Dans cette première partie je vous présenterais les stratégies de résolution choisis dd
+\subsection{Implémentation des stratégies}
+
+\subsection{Test du résolveur}
