--- a/Rapport Stage/texFiles/problematique.tex
+++ b/Rapport Stage/texFiles/problematique.tex
@@ -8,7 +8,7 @@ Le but du jeu est de remplir chaque ligne avec 9 chiffre allant de 1 à 9 en fai
 
 \begin{figure}[!h]
 \centering
-\includegraphics[width=10cm]{./images/Sudoku_Exemple.png}\label{Sudoku}
+\includegraphics[width=5cm]{./images/Sudoku_Exemple.png}\label{Sudoku}
 \caption{Exemple de Sudoku complet.}
 \end{figure}
 
@@ -16,10 +16,13 @@ Le but du jeu est de remplir chaque ligne avec 9 chiffre allant de 1 à 9 en fai
 \section{Contexte du problème}\label{Contexte_du_probleme}}
 
 La résolution de sudoku est un sujet ou plusieurs solutions existent et où c'est dans la complexité\footnote{le nombre d'action réalisé durant la résolution} des différentes solution que réside la difficulté la résolution. Nous pouvons aussi rendre compte de résolution de sudoku avec des règles spécifiques.
+\newline
 tel que:
 
 \begin{figure}[!h]
 \centering
-\includegraphics[width=10cm]{./images/Sudoku_Special.png}\label{Sudoku_Special}
-\caption{Exemple de Sudoku où on applique la règle de l'unicité des chiffres sur les diagonnales.}
+\includegraphics[width=5cm]{./images/Sudoku_Special.png}\label{Sudoku_Special}
+\caption{Sudoku où l'on applique la règle de l'unicité des chiffres sur les diagonnales.}
 \end{figure}
+
+Dans ce mémoire nous allons éssentiellement parler de deux d'entre elles celle de la résolution de sudoku vu sous l'angle d'un problème d'optimisation linéaire grace a l'algorithme du simplex et une autre plus simple celle de l'algorithme du backtraking.
