--- a/Rapport Stage/texFiles/rapport.tex
+++ b/Rapport Stage/texFiles/rapport.tex
@@ -66,7 +66,7 @@
 }
 
 \title{\LARGE{\begin{center}RAPPORT DE STAGE\end{center} \leavevmode\newline Titre du rapport}}
-\author{\textsc{Minatchy} Jérôme\\M1 Informatique\\Année universitaire 2020/2021 Pour le 3 Juin 2021}
+\author{\textsc{Minatchy} Jérôme\\M1 Informatique\\Année universitaire 2020/2021 à rendre pour le 3 Juin 2021}
 \date{\today}
 \makeatletter
 
