--- a/Rapport Stage/texFiles/biblioMinatchy.bib
+++ b/Rapport Stage/texFiles/biblioMinatchy.bib
@@ -7,28 +7,28 @@ publisher={Springer},
 year={2012}
 }
 
-@article{Lympero,
-title = "Online social contagion modeling through the dynamics of Integrate-and-Fire neurons",
-journal = "Information Sciences",
-volume = "320",
-pages = "26 - 61",
-year = "2015",
-issn = "0020-0255",
-doi = "https://doi.org/10.1016/j.ins.2015.05.004",
-url = "http://www.sciencedirect.com/science/article/pii/S002002551500362X",
-author = "Ilias N. Lymperopoulos and George D. Ioannou",
+@book{naturalHandbook,
+author={Giulio Zambon},
+title={Sudoku Programming with C},
+publisher={Apress},
+year={2015}
 }
 
-@article{Kriener,
-author = {Kriener, Birgit and Enger, Håkon and Tetzlaff, Tom and Plesser, Hans and Gewaltig, Marc-Oliver and Einevoll, Gaute},
-year = {2014},
-month = {10},
-pages = {136},
-title = {Dynamics of self-sustained asynchronous-irregular activity in random networks of spiking neurons with strong synapses},
-volume = {8},
-journal = {Frontiers in Computational Neuroscience},
-doi = {10.3389/fncom.2014.00136}
+@article{NombredeDieu,
+title = "17 est le nombre de Dieu au sudoku",
+journal = "Le monde",
+year = "2012",
+url = "https://www.lemonde.fr/passeurdesciences/article/2012/01/08/17-est-le-nombre-de-dieu-au-sudoku_5986165_5470970.html",
+author = "Pierre Barthélémy",
 }
+
+@article{Differents,
+title = "There are 5472730538 essentially different Sudoku grids",
+year = "2005",
+url = "http://www.afjarvis.staff.shef.ac.uk/sudoku/sudgroup.html",
+author = "Ed Russell and Frazer Jarvis",
+}
+
 
 @misc
 {git,
