--- a/Rapport Stage/texFiles/rapport.tex
+++ b/Rapport Stage/texFiles/rapport.tex
@@ -65,7 +65,7 @@
   \put(\LenToUnit{\dimexpr\paperwidth-#1},\LenToUnit{\dimexpr\paperheight-#2}){\blap{\llap{#3}}}%
 }
 
-\title{\LARGE{\begin{center}RAPPORT DE STAGE\end{center} \leavevmode\newline Titre du rapport}}
+\title{\LARGE{\begin{center}MÉMOIRE DE STAGE\end{center} \leavevmode\newline Résolution de Sudoku}}
 \author{\textsc{Minatchy} Jérôme\\M1 Informatique\\Année universitaire 2020/2021 à rendre pour le 3 Juin 2021}
 \date{\today}
 \makeatletter
